--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
@@ -27,47 +27,46 @@
         </activity>
 
         <activity
-            android:name=".ui.LoginActivity"
-            android:label="Login Activity" />
+            android:name=".ui.LoginActivity" />
 
         <activity
-            android:name=".MainActivity"
-            android:exported="true" />
+            android:name=".MainActivity" />
 
         <activity
-            android:name=".ui.MatchActivity"
-            android:label="Match Activity" />
+            android:name=".ui.MatchActivity" />
 
         <activity
-            android:name=".ui.BattleActivity"
-            android:label="Battle Activity" />
+            android:name=".ui.BattleActivity" />
 
         <activity
-            android:name=".ui.RegisterActivity"
-            android:label="Register Activity" />
+            android:name=".ui.RegisterActivity" />
 
         <activity
-            android:name=".ui.ResultActivity"
-            android:label="Result Activity" />
+            android:name=".ui.ResultActivity" />
 
         <activity
-            android:name=".ui.TrainingActivity"
-            android:label="Training Activity" />
-
-        <activity
-            android:name=".ui.ProfileActivity"
-            android:label="Profile Activity" />
+            android:name=".ui.TrainingActivity" />
 
         <activity
             android:name=".ui.LeaderboardActivity"
-            android:label="Leaderboard Activity"
             tools:ignore="Instantiatable" />
 
         <activity
             android:name=".ui.ErrorBookActivity"
-            android:label="ErrorBook Activity"
             tools:ignore="Instantiatable" />
-
+        <activity
+            android:name=".ui.TrainingQuestionActivity"
+             />
+        <activity
+            android:name=".ui.TrainingHistoryActivity" />
+        <activity
+            android:name=".ui.TrainingDetailActivity" />
+        <activity
+            android:name=".ui.EmailBindActivity" />
+        <activity
+            android:name=".ui.ForgotPasswordActivity" />
+        <activity
+            android:name=".ui.ProfileSettingsActivity" />
 
     </application>
 
